// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/anchor/demo/basic.md correctly 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="wmstool-anchor-wrapper"
    >
      <div
        class="wmstool-anchor"
      >
        <div
          class="wmstool-anchor-ink"
        >
          <span
            class="wmstool-anchor-ink-ball"
          />
        </div>
        <div
          class="wmstool-anchor-link"
        >
          <a
            class="wmstool-anchor-link-title"
            href="#components-anchor-demo-basic"
            title="Basic demo"
          >
            Basic demo
          </a>
        </div>
        <div
          class="wmstool-anchor-link"
        >
          <a
            class="wmstool-anchor-link-title"
            href="#components-anchor-demo-fixed"
            title="Fixed demo"
          >
            Fixed demo
          </a>
        </div>
        <div
          class="wmstool-anchor-link"
        >
          <a
            class="wmstool-anchor-link-title"
            href="#API"
            title="API"
          >
            API
          </a>
          <div
            class="wmstool-anchor-link"
          >
            <a
              class="wmstool-anchor-link-title"
              href="#Anchor-Props"
              title="Anchor Props"
            >
              Anchor Props
            </a>
          </div>
          <div
            class="wmstool-anchor-link"
          >
            <a
              class="wmstool-anchor-link-title"
              href="#Link-Props"
              title="Link Props"
            >
              Link Props
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/anchor/demo/static.md correctly 1`] = `
<div
  class="wmstool-anchor-wrapper"
>
  <div
    class="wmstool-anchor fixed"
  >
    <div
      class="wmstool-anchor-ink"
    >
      <span
        class="wmstool-anchor-ink-ball"
      />
    </div>
    <div
      class="wmstool-anchor-link"
    >
      <a
        class="wmstool-anchor-link-title"
        href="#components-anchor-demo-basic"
        title="Basic demo"
      >
        Basic demo
      </a>
    </div>
    <div
      class="wmstool-anchor-link"
    >
      <a
        class="wmstool-anchor-link-title"
        href="#components-anchor-demo-fixed"
        title="Fixed demo"
      >
        Fixed demo
      </a>
    </div>
    <div
      class="wmstool-anchor-link"
    >
      <a
        class="wmstool-anchor-link-title"
        href="#API"
        title="API"
      >
        API
      </a>
      <div
        class="wmstool-anchor-link"
      >
        <a
          class="wmstool-anchor-link-title"
          href="#Anchor-Props"
          title="Anchor Props"
        >
          Anchor Props
        </a>
      </div>
      <div
        class="wmstool-anchor-link"
      >
        <a
          class="wmstool-anchor-link-title"
          href="#Link-Props"
          title="Link Props"
        >
          Link Props
        </a>
      </div>
    </div>
  </div>
</div>
`;
